# AI_BIZ

./: .dockerignore  .gitignore  Dockerfile  migrate_products_to_store.py  package.json  pyproject.toml  server.py
embeddings/: aicore_embedding.py  embedding_provider.py
models/: image_model.py  image_models.py  image_tags_models.py
services/: image_service.py  image_tags_service.py
stores/: base_vector_store.py  image_store.py  image_tags_store.py  milvus_vector_store.py  vector_store_provider.py
util/: env_loader.py  image_processor.py
workers/: migration_worker.py
